# package_agentic

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agents_core/: __init__.py  orchestrator.py
agents_core/agents/: __init__.py
agents_core/core/: __init__.py  base_runner.py
agents_core/instructions/: builder.py
agents_core/mcp/: server_builder.py
agents_core/models/: __init__.py
agents_core/registry/: __init__.py  agent_catalog.py  agent_factory.py  agent_registry.py  tool_registry.py
agents_core/services/: __init__.py  chat.py  events.py  hooks.py  standalone_runner.py  streaming_helper.py
agents_core/session/: __init__.py  sqlite_store.py
agents_core/tools/: __init__.py
agents_core/utils/: __init__.py
documentation/project/: architecture.md  capabilities.md  conventions.md
examples/: azure_openai_agent.py  context_and_session.py  custom_capability.py  simple_chat_agent.py
examples/yaml_capabilities/: agents.yaml  run.py
sinan_agentic_core/: __init__.py  orchestrator.py
sinan_agentic_core/agents/: __init__.py
sinan_agentic_core/core/: __init__.py  base_runner.py  tool_error_recovery.py  tool_tracer.py  turn_budget.py  turn_budget_tool.py
sinan_agentic_core/guardrails/: __init__.py
sinan_agentic_core/instructions/: builder.py
sinan_agentic_core/llm/: __init__.py  config.py  factory.py  yaml_loader.py
sinan_agentic_core/mcp/: context_protocol.py  server_builder.py  tool_adapter.py  yaml_schema.py
sinan_agentic_core/models/: __init__.py  context.py
sinan_agentic_core/registry/: __init__.py  agent_catalog.py  agent_factory.py  agent_registry.py  capability_registry.py  guardrail_registry.py  (+2 more)
tests/: conftest.py  test_agent_catalog.py  test_capability_registry.py  test_core.py  test_instruction_builder.py  test_llm_provider.py  test_models.py  test_orchestrator.py  test_pluggable_capabilities.py  test_registry.py  test_services.py  test_session.py  test_tool_catalog.py  test_tool_error_recovery.py  test_tool_tracer.py  test_turn_budget.py
(+49 files in other folders)
