[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-core"
version = "0.1.0"
description = "State-of-the-art framework for building AI agents with OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Thomas Pernet-Coudrier", email = "t.pernetcoudrier@gmail.com"}
]
keywords = [
    "ai",
    "agents",
    "llm",
    "openai",
    "multi-agent",
    "orchestration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "openai-agents>=0.1.0",  # OpenAI Agents SDK
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/thomaspernet/package_agentic"
Documentation = "https://github.com/thomaspernet/package_agentic#readme"
Repository = "https://github.com/thomaspernet/package_agentic"
Issues = "https://github.com/thomaspernet/package_agentic/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents_core*"]
exclude = ["workflows_core*", "tests*"]

[tool.setuptools.package-data]
agents_core = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
